[tool.poetry]
name = "stocks"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2,<3.3"
requests = "^2.31.0"
whitenoise = "^6.6.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
